restructure to support multi-version

--- a/site/_includes/4.0/partials/footer.html
+++ b/site/_includes/4.0/partials/footer.html
@@ -22,7 +22,7 @@
             <div class="row">
             <div class="media col">
                 <div class="d-flex me-0_5">
-                    <img src="/assets/aem/aem-logo.png" width="40" height="40" alt="AEM logo" />
+                    <img src="{{ site.path }}/assets/aem/aem-logo.png" width="40" height="40" alt="AEM logo" />
                 </div>
                 <div class="media-body">
                     <span class="font-weight-bold"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="col-md-auto">
-                {% include icons/cast-logo.svg, width: "9.645rem", height: "3rem" %}
+                {% include "./icons/cast-logo.svg", width: "9.645rem", height: "3rem" %}
             </div>
         </div>
     </div>
