update 404, fix icons, move settings menu

--- a/site/_includes/4.0/layouts/home.html
+++ b/site/_includes/4.0/layouts/home.html
@@ -16,7 +16,7 @@
 {% include notification %}
 {% include topnav %}
 
-<main id="content">
+<main id="content" role="main">
 {{ content }}
 </main>
 
