--- a/site/_includes/4.0/partials/settings_menu.html
+++ b/site/_includes/4.0/partials/settings_menu.html
@@ -1,5 +1,5 @@
 <div class="dropdown dropend">
-    <a href="#" role="button" class="nav-link px-0_5" aria-label="Settings" title="Settings" data-cfw="dropdown">
+    <a href="#" role="button" class="nav-link px-0_5" aria-label="Settings" data-cfw="dropdown">
         {% include "./icons/cog.svg", width: "1rem", height: "1rem" %}
     </a>
     <ul class="dropdown-menu">
