--- a/site/_includes/4.0/partials/footer.html
+++ b/site/_includes/4.0/partials/footer.html
@@ -3,10 +3,10 @@
         <ul class="list list-horizontal font-weight-bold">
             <li class="pe-0_5"><a href="{{ site.path}}/about/overview/">About <span class="sr-only">Figuration</span></a></li>
             <li class="px-0_5"><a href="{{ site.repo }}">GitHub</a></li>
-            <li class="ps-0_5"><a href="{{ site.twitter }}">Twitter</a></li>
+            <li class="ps-0_5"><a href="{{ site.twitter.home }}">Twitter</a></li>
         </ul>
         <p>
-            <strong>Current version:</strong> {{ site.version.current }}
+            <strong>Latest version:</strong> {{ site.version.current }}
             <br>
             &copy; 2013-{{ 'now' | date: "%Y" }} <a href="http://www.cast.org/">CAST, Inc.</a>
             <br>
