--- a/site/_includes/4.0/layouts/home.html
+++ b/site/_includes/4.0/layouts/home.html
@@ -1,4 +1,4 @@
-{%- assign pathPartials = site.version.path | prepend: "." | append: "/partials" -%}
+{%- assign pathPartials = pathVersion | prepend: "." | append: "/partials" -%}
 
 {%- assign head = pathPartials | append: "/head.html" -%}
 {%- assign skiplink = pathPartials | append: "/skiplink.html" -%}
@@ -7,7 +7,7 @@
 {%- assign footer = pathPartials | append: "/footer.html" -%}
 
 <!doctype html>
-<html lang="en-us">
+<html lang=""{{ site.language }}">
 <head>
 {%- include head -%}
 </head>
