--- a/site/_includes/4.0/partials/sidebar_nav.html
+++ b/site/_includes/4.0/partials/sidebar_nav.html
@@ -5,7 +5,10 @@
 {%- endif %}
 
 {%- assign page_slug = page.url | pathLast -%}
-<nav class="cf-links" aria-label="Section">
+<button class="btn btn-default mb-0_5 d-md-none" aria-label="Toggle page navigation" data-cfw="collapse" data-cfw-collapse-target="#cf-links-nav">
+    <span aria-hidden="true">Pages <span class="caret" ></span></span>
+</button>
+<nav id="cf-links-nav" class="cf-links collapse" aria-label="Page">
   <ul class="list-unstyled">
     {% for navgroup in nav -%}
     {%- assign current_sect = nil -%}
@@ -16,7 +19,7 @@
       {%- assign current_sect = ' <span class="sr-only">(current section)</span>' -%}
     {%- endif -%}
     <li class="mb-0_25{% if page_count > 0 %} has-children{% endif %}">
-      <a href="{{ site.path }}{{ site.version.path }}/{{ group_slug }}/{{ first_slug }}/" class="cf-sidebar-header fs-large font-weight-sbold{% if group == group_slug %} active open{% endif %}" data-cfw="collapse" data-cfw-collapse-target="#sidenav{{ forloop.index }}">
+      <a href="{{ site.path }}{{ pathVersion }}/{{ group_slug }}/{{ first_slug }}/" class="cf-sidebar-header fs-large font-weight-sbold{% if group == group_slug %} active open{% endif %}" data-cfw="collapse" data-cfw-collapse-target="#sidenav{{ forloop.index }}">
           <span class="nav-link-inner">
             {%- if page_count > 0 -%}<span class="caret" aria-hidden="true"></span>{%- endif -%}
             <span class="cf-sidebar-header-title">{{- navgroup.title -}}</span>
@@ -37,7 +40,7 @@
               {%- if group_slug == 'about' -%}
                   <a href="{{ site.path }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link {{ active }}"><span class="nav-link-inner">{{ doc.title }}{{ current_page }}</span></a>
                 {%- else -%}
-                  <a href="{{ site.path }}{{ site.version.path }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link {{ active }}"><span class="nav-link-inner">{{ doc.title }} {{ current }}</span></a>
+                  <a href="{{ site.path }}{{ pathVersion }}/{{ group_slug }}/{{ doc_slug }}/" class="nav-link {{ active }}"><span class="nav-link-inner">{{ doc.title }} {{ current }}</span></a>
                 {%- endif -%}
             </li>
           {% endfor -%}
