--- a/site/_includes/4.0/partials/topnav.html
+++ b/site/_includes/4.0/partials/topnav.html
@@ -9,22 +9,22 @@
     <nav class="navbar-collapse collapse order-last order-lg-unordered text-nowrap" id="cf-topnav" aria-label="Main">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="{{ site.path }}{{ site.version.path }}/get-started/quick-start/" class="nav-link {% if group == "get-started" %}active{% endif %}">Get Started{% if group == "get-started" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}{{ pathVersion }}/get-started/quick-start/" class="nav-link {% if group == "get-started" %}active{% endif %}">Get Started{% if group == "get-started" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
             <li class="nav-item">
-                <a href="{{ site.path }}{{ site.version.path }}/layout/overview/" class="nav-link {% if group == "layout" %}active{% endif %}">Layout{% if group == "layout" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}{{ pathVersion }}/layout/overview/" class="nav-link {% if group == "layout" %}active{% endif %}">Layout{% if group == "layout" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
             <li class="nav-item">
-                <a href="{{ site.path }}{{ site.version.path }}/content/reboot/" class="nav-link {% if group == "content" %}active{% endif %}">Content{% if group == "content" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}{{ pathVersion }}/content/reboot/" class="nav-link {% if group == "content" %}active{% endif %}">Content{% if group == "content" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
             <li class="nav-item">
-                <a href="{{ site.path }}{{ site.version.path }}/components/alerts/" class="nav-link {% if group == "components" %}active{% endif %}">Components{% if group == "components" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}{{ pathVersion }}/components/alerts/" class="nav-link {% if group == "components" %}active{% endif %}">Components{% if group == "components" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
             <li class="nav-item">
-                <a href="{{ site.path }}{{ site.version.path }}/utilities/borders/" class="nav-link {% if group == "utilities" %}active{% endif %}">Utilities{% if group == "utilities" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}{{ pathVersion }}/utilities/borders/" class="nav-link {% if group == "utilities" %}active{% endif %}">Utilities{% if group == "utilities" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
             <li class="nav-item">
-                <a href="{{ site.path }}{{ site.version.path }}/widgets/overview/" class="nav-link {% if group == "widgets" %}active{% endif %}">Widgets{% if group == "widgets" %} <span class="sr-only">(current section)</span>{% endif %}</a>
+                <a href="{{ site.path }}{{ pathVersion }}/widgets/overview/" class="nav-link {% if group == "widgets" %}active{% endif %}">Widgets{% if group == "widgets" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
         </ul>
     </nav>
@@ -34,7 +34,7 @@
             {%- include "./partials/version_menu.html" %}
         </li>
         <li class="nav-item">
-            <a href="{{ site.twitter }}" class="nav-link px-0_5" aria-label="Twitter">
+            <a href="{{ site.twitter.home }}" class="nav-link px-0_5" aria-label="Twitter">
                 {% include "./icons/twitter.svg", width: "1rem", height: "1rem" %}
             </a>
         </li>
