--- a/site/assets/4.0/scss/_sidebar.scss
+++ b/site/assets/4.0/scss/_sidebar.scss
@@ -2,22 +2,23 @@
 .cf-sidebar {
     position: relative;
     z-index: 1;
+    padding-top: .5rem;
+    padding-bottom: 0;
     background-color: palette($uibase, 50);
     border-bottom: 1px solid $uibase-200;
 
     @include media-breakpoint-up(md) {
+        padding-top: 0;
+        padding-bottom: 1rem;
+        //overflow: hidden;
+        border-right: 1px solid $uibase-200;
+        border-bottom: 0;
+
         @supports (position: sticky) {
             position: sticky;
             top: 3.375rem;
             max-height: calc(100vh - 3.375rem);
         }
-    }
-
-    @include media-breakpoint-up(md) {
-        padding-bottom: 1rem;
-        //overflow: hidden;
-        border-right: 1px solid $uibase-200;
-        border-bottom: 0;
     }
 }
 
@@ -26,14 +27,19 @@
 }
 
 .cf-links {
-    padding: 1rem 1rem 0;
-    margin-right: -1rem;
-    margin-left: -1rem;
+    padding-top: 0.5rem;
+    border-top: 1px solid $border-color;
 
     @include media-breakpoint-up(md) {
+        // stylelint-disable-next-line declaration-no-important
+        display: block !important;
+        border-top: 0;
+
         @supports (position: sticky) {
             max-height: calc(100vh - 3.375rem);
-            padding-bottom: 2rem;
+            padding-right: 1rem;
+            padding-bottom: 1rem;
+            margin-right: -1rem;
             overflow-x: visible;
             overflow-y: auto;
 
