--- a/site/assets/4.0/scss/_sidebar.scss
+++ b/site/assets/4.0/scss/_sidebar.scss
@@ -27,7 +27,7 @@
 }
 
 .cf-links {
-    padding-top: 0.5rem;
+    padding-top: .5rem;
     border-top: 1px solid $border-color;
 
     @include media-breakpoint-up(md) {
