re-indent and add component pages

--- a/site/_includes/4.0/layouts/home.html
+++ b/site/_includes/4.0/layouts/home.html
@@ -7,7 +7,7 @@
 {%- assign footer = pathPartials | append: "/footer.html" -%}
 
 <!doctype html>
-<html lang=""{{ site.language }}">
+<html lang="{{ site.language }}">
 <head>
 {%- include head -%}
 </head>
