--- a/site/_includes/4.0/partials/head.html
+++ b/site/_includes/4.0/partials/head.html
@@ -13,7 +13,7 @@
 
 {%- comment -%}
 <!-- Use faceted search ? -->
-<meta name="docsearch:language" content=""{{ site.language }}">
+<meta name="docsearch:language" content="{{ site.language }}">
 <meta name="docsearch:version" content="{{ version.docs | valueIfEmpty: site.version.docs }}">
 {%- endcomment -%}
 
