--- a/site/_includes/4.0/partials/notification.html
+++ b/site/_includes/4.0/partials/notification.html
@@ -1,4 +1,4 @@
 <div class="bg-success-200 text-black text-center py-0_25 px-1">
-    <span class="font-weight-bold">v4 Beta now available! Try it out! Feedback welcome!</span><br />
-    <a href="{{ site.url }}/3.0/" class="text-black">Looking for v3 docs?</a>
+  <span class="font-weight-bold">v4 Beta now available! Try it out! Feedback welcome!</span><br />
+  <a href="/3.0/" class="text-black">Looking for v3 docs?</a>
 </div>
