--- a/site/_includes/layouts/alias.html
+++ b/site/_includes/layouts/alias.html
@@ -2,7 +2,7 @@
 {{ "/" | append: site.path | append: destination }}
 {%- endcapture -%}
 <!doctype html>
-<html lang=""{{ site.language }}">
+<html lang="{{ site.language }}">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
   <link rel="canonical" href="{{ site.url | append: aliasURL }}">
