--- a/site/assets/4.0/scss/_syntax.scss
+++ b/site/assets/4.0/scss/_syntax.scss
@@ -85,7 +85,7 @@ pre[class*="language-"] {
 .token.property,
 .token.regex,
 .token.inserted {
-    color: #36acaa;
+    color: #1d8250; //#278066; //#36acaa;
 }
 
 .token.atrule,
