--- a/site/_includes/4.0/layouts/doc.html
+++ b/site/_includes/4.0/layouts/doc.html
@@ -9,7 +9,7 @@
 {%- assign algolia = pathPartials | append: "/algolia.html" -%}
 
 <!doctype html>
-<html lang=""{{ site.language }}">
+<html lang="{{ site.language }}">
 <head>
 {% include head %}
 </head>
