--- a/site/_includes/4.0/partials/settings_menu.html
+++ b/site/_includes/4.0/partials/settings_menu.html
@@ -1,10 +1,10 @@
 <div class="dropdown dropend">
-    <a href="#" role="button" class="nav-link px-0_5" aria-label="Settings" data-cfw="dropdown">
-        {% include "./icons/cog.svg", width: "1rem", height: "1rem" %}
-    </a>
-    <ul class="dropdown-menu">
-        <li class="dropdown-header">Direction</li>
-        <li><button type="button" class="dropdown-item" id="dir-ltr">Left-to-right</button></li>
-        <li><button type="button" class="dropdown-item" id="dir-rtl">Right-to-left</button></li>
-    </ul>
+  <a href="#" role="button" class="nav-link px-0_5" aria-label="Settings" data-cfw="dropdown">
+    {% include "./icons/cog.svg", width: "1rem", height: "1rem" %}
+  </a>
+  <ul class="dropdown-menu position-absolute">
+    <li class="dropdown-header">Direction</li>
+    <li><button type="button" class="dropdown-item" id="dir-ltr">Left-to-right</button></li>
+    <li><button type="button" class="dropdown-item" id="dir-rtl">Right-to-left</button></li>
+  </ul>
 </div>
